agrego y modifico componentes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <a href="./index.html">
                 <img class="logo" src="./assets/—Pngtree—film projector_4426282.png" alt="logo de cine america" >
             </a>
-            <a class="navbar-brand" href="./index.html">Cine America</a>
+            <div class="inicio">
+                <a class="navbar-brand" href="./index.html">Cine América</a>
+                <p class="home">inicio</p>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -41,7 +44,7 @@
                         </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./pages/perfil.html">Ir a mi perfil</a></li>
-                        <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
                     </ul>
                     </li>
                 </ul>
@@ -59,16 +62,16 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/ban1.png" class="d-block w-100 h-auto" alt="primer foto carrusel">
+            <img src="./assets/ban1.png" class="d-block w-100 h-80" alt="primer foto carrusel">
           </div>
           <div class="carousel-item">
-            <img src="./assets/ban2.png" class="d-block w-100 h-auto" alt="segunda foto carrusel">
+            <img src="./assets/ban2.png" class="d-block w-100 h-80" alt="segunda foto carrusel">
           </div>
           <div class="carousel-item">
-            <img src="./assets/ban3.png" class="d-block w-100 h-auto" alt="tercera foto carrusel">
+            <img src="./assets/ban3.png" class="d-block w-100 h-80" alt="tercera foto carrusel">
           </div>
           <div class="carousel-item">
-            <img src="./assets/ban4.png" class="d-block w-100 h-auto" alt="cuarta foto carrusel">
+            <img src="./assets/ban4.png" class="d-block w-100 h-80" alt="cuarta foto carrusel">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -84,7 +87,9 @@
     <main class="container-fluid"> 
         <section class="estrenos">
     <!-- starts grilla -->
-        <h1>En Cartelera</h1>
+        <div class="espacio">
+            <h1>En Cartelera</h1>
+        </div>
         <section class="row">
             <!-- card 1 -->
             <figure class="col-sm-12 col-lg-6">
@@ -95,10 +100,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h2 class="card-title">Nombre Pelicula1</h2>
+                                <h2 class="card-title">Hasta el punto</h2>
                                 <h3 class="card-subtitle">Estreno</h3>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora dolorem nihil omnis porro pariatur error in architecto quis dolorum at modi accusantium, suscipit laudantium saepe voluptatum ipsum asperiores voluptatem? Ad!Lorem.</p>
-                                <p class="card-text">+16. Drama.<br>Director: Juan Coder.<br>Origen: Coderlandia</p>
+                                <p class="card-text">Esta película protagonizada por Cristian Ibagaza y Florence Mach nos hace recorrer las vigas de relaciones truncadas por el azar en la década de 1980. La película nos plantea una pregunta: ¿cuántas veces somos nosotros los que decidimos?</p>
+                                <p class="card-text">+16. Drama. 119min.<br>Director: Jason Burrh.<br>Origen:  Bélgica / Paises Bajos.</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
                         </div>
@@ -113,10 +118,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h2 class="card-title">Nombre Pelicula2</h2>
+                                <h2 class="card-title">Cruce de datos</h2>
                                 <h3 class="card-subtitle">Estreno</h3>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora dolorem nihil omnis porro pariatur error in architecto quis dolorum at modi accusantium, suscipit laudantium saepe voluptatum ipsum asperiores voluptatem? Ad!Lorem.</p>
-                                <p class="card-text">+16. Drama.<br>Director: Juan Coder.<br>Origen: Coderlandia</p>
+                                <p class="card-text">Protagonizada por el reconocido Jerry Peterson. Es una de esas películas que, si te gusta el género, no podés dejar de ver. Ambientada en el sur de Estados Unidos. Dos amigos deciden hacer un hackeo que trae consecuencias mayúsculas.</p>
+                                <p class="card-text">+16. Acción. 104min.<br>Director: John Jackson.<br>Origen: USA</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
                         </div>
@@ -127,14 +132,14 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portadaDePeliculas.png" class="img-fluid rounded-start w100" alt="portada pelicula 3">
+                            <img src="./assets/portadaDePeliculas.png" class="img-fluid rounded-start w100 imgPortadas" alt="portada pelicula 3">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h2 class="card-title">Nombre Pelicula3</h2>
+                                <h2 class="card-title">El cocodrilo</h2>
                                 <h3 class="card-subtitle">Estreno</h3>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora dolorem nihil omnis porro pariatur error in architecto quis dolorum at modi accusantium, suscipit laudantium saepe voluptatum ipsum asperiores voluptatem? Ad!Lorem.</p>
-                                <p class="card-text">+16. Drama.<br>Director: Juan Coder.<br>Origen: Coderlandia</p>
+                                <p class="card-text">Esta comedia negra nos entrega muchos momentos de risas interminables. El protagonista apuesta todo lo que tardó 40 años en ahorrar, convencido de poder encontrar un cocodrilo en el casi seco Río Reven, en un pequeño pueblo al oeste de Irlanda.</p>
+                                <p class="card-text">+13. Comedia. 144min.<br>Director: Phillips J. Varen.<br>Origen: Irlanda</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
                         </div>
@@ -145,14 +150,14 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portadaDePeliculas.png" class="img-fluid rounded-start w100" alt="portada pelicula 4">
+                            <img src="./assets/portadaDePeliculas.png" class="img-fluid rounded-start w100 imgPortadas" alt="portada pelicula 4">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h2 class="card-title">Nombre Pelicula4</h2>
+                                <h2 class="card-title">El orin del Diablo (2021)</h2>
                                 <h3 class="card-subtitle">Ciclo Terror</h3>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora dolorem nihil omnis porro pariatur error in architecto quis dolorum at modi accusantium, suscipit laudantium saepe voluptatum ipsum asperiores voluptatem? Ad!Lorem.</p>
-                                <p class="card-text">+16. Drama.<br>Director: Juan Coder.<br>Origen: Coderlandia</p>
+                                <p class="card-text">Ambientada en fines del siglo XIX, esta película de la reconocida Mia Pavlova y protagonizada por Steven Gerard y Pam Beasly cuenta la historia de la primera aparición de un ente. Con momentos de alta tensión y buenos diálogos y fotografía.</p>
+                                <p class="card-text">+16. Terror. 92min.<br>Director: Mia Pavlova.<br>Origen: Gran Bretaña</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
                         </div>
@@ -167,15 +172,16 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h2 class="card-title">Nombre Pelicula5</h2>
+                                <h2 class="card-title">El viento trae una cosa (1998)</h2>
                                 <h3 class="card-subtitle">Cine Club Temporada 71</h3>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora dolorem nihil omnis porro pariatur error in architecto quis dolorum at modi accusantium, suscipit laudantium saepe voluptatum ipsum asperiores voluptatem? Ad!Lorem.</p>
-                                <p class="card-text">+16. Drama.<br>Director: Juan Coder.<br>Origen: Coderlandia</p>
+                                <p class="card-text">Una obra de arte de nuesta tierra que tenés que ver o volver a ver. Una dirección premiada y un elenco que lleva a la perfección esta película de historias mundanas pero irrepetibles, donde lo común es lo raro.</p>
+                                <p class="card-text">ATP. Drama. 102min.<br>Director: Juan Trip.<br>Origen: Arrgentina</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
                         </div>
                     </div>
             </figure>
+            <!-- card 6 -->
             <figure class="col-sm-12 col-lg-6">
                 <div class="card">
                     <div class="row g-0">
@@ -184,10 +190,10 @@
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h2 class="card-title">Nombre Pelicula6</h2>
+                                <h2 class="card-title">La muerte del ocelote (2019)</h2>
                                 <h3 class="card-subtitle">Ciclo Desvelado</h3>
-                                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora dolorem nihil omnis porro pariatur error in architecto quis dolorum at modi accusantium, suscipit laudantium saepe voluptatum ipsum asperiores voluptatem? Ad!Lorem.</p>
-                                <p class="card-text">+16. Drama.<br>Director: Juan Coder.<br>Origen: Coderlandia</p>
+                                <p class="card-text">Esta coproducción española/argentina carga la sala de un suspenso palpable. Es la historia de una familia con buen pasado y triste presente, quienes con pocas herramientas deciden dar frente a una pelea desigual. Nominada a los Goyeneche.</p>
+                                <p class="card-text">+16. Suspenso. 144min.<br>Director: María Sanchez.<br>Origen: España / Argentina</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
                         </div>
@@ -199,58 +205,78 @@
     <section class="grid-pelis grid grid-template-column-row">
         <!-- proximas peliculas -->
         <div class="titulo-proximamente" id="titulo-proximamente">
-            <p class="segundos-titulos">Proximamente</p>
+            <p class="segundos-titulos">Próximamente</p>
         </div>
-        <div class="proximas-peliculas container-pelis" id="proximas-peliculas">
+        <div class="container-pelis" id="proximas-peliculas">
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png">
-                <figcaption class="fig-peli">Estrena XX/XX/XX</figcaption>
+                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 1">
+                <figcaption class="fig-peli">Estrena 22/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png">
-                <figcaption class="fig-peli">Estrena XX/XX/XX</figcaption>
+                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 2">
+                <figcaption class="fig-peli">Estrena 22/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png">
-                <figcaption class="fig-peli">Estrena XX/XX/XX</figcaption>
+                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 3">
+                <figcaption class="fig-peli">Estrena 15/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png">
-                <figcaption class="fig-peli">Estrena XX/XX/XX</figcaption>
+                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 4">
+                <figcaption class="fig-peli">Estrena 15/08/23</figcaption>
+            </figure>
+            <figure class="proxima-pelicula1">
+                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 5">
+                <figcaption class="fig-peli">Estrena 08/08/23</figcaption>
+            </figure>
+            <figure class="proxima-pelicula1">
+                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 6">
+                <figcaption class="fig-peli">Estrena 08/08/23</figcaption>
+            </figure>
+            <figure class="proxima-pelicula1">
+                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 7">
+                <figcaption class="fig-peli">Estrena 01/08/23</figcaption>
+            </figure>
+            <figure class="proxima-pelicula1">
+                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 8">
+                <figcaption class="fig-peli">Estrena 01/08/23</figcaption>
+            </figure>
+            <figure class="proxima-pelicula1">
+                <img class="portada-peli fluid"src="./assets/portadaDePeliculas.png" alt="portada proxima pelicula 9">
+                <figcaption class="fig-peli">Estrena 24/07/23</figcaption>
             </figure>
         </div>
-        <!-- noticias -->
+        <!-- noticias titulo -->
         <div class="titulo-noticias" id="titulo-noticias">
             <p class="segundos-titulos">Noticias y Novedades</p>
         </div>
-        <div class="noticias container-noticias" id="noticias">
-            <figure>
-                <img class="img-noticias fluid" src="./assets/Periodistas-en-el-cine-1000.jpg">
-                <figcaption class="fig-noticia">Noticia 1</figcaption>
+        <aside class="noticias-camerica grid-aside" id="noticias">
+        <!-- noticias cine nacional -->
+            <figure class="f1">
+                <div class="div-cine-nacional">
+                    <img class="img-noticias-large fluid" src="./assets/Periodistas-en-el-cine-1000.jpg">
+                    <a class="a-cine" href="#"><figcaption class="fig-noticia">Cine Nacional</figcaption></a>
+                </div>
+                <div class="div-p-nacional">
+                    <p class="p-titulo"><a class="a-titulo" href="#">Ricardo Darín confirmó su participación en la nueva serie de Campanella.</a></p>
+                    <p class="p-info">El actor deja atrás su idea de no participar en series y le da oportunidad a este formato en un proyecto que promete.</p>
+                </div>
             </figure>
-            <figure>
-                <img class="img-noticias fluid" src="./assets/Periodistas-en-el-cine-1000.jpg">
-                <figcaption class="fig-noticia">Noticia 2</figcaption>
+        <!-- noticias cine internacional -->
+            <figure class="f2">
+                <div class="div-cine-nacional">
+                    <img class="img-noticias-large fluid" src="./assets/Periodistas-en-el-cine-1000.jpg">
+                    <a class="a-cine" href="#"><figcaption class="fig-noticia">Cine Internacional</figcaption></a>
+                </div>
+                <div class="div-p-internacional">
+                    <p class="p-titulo"><a class="a-titulo" href="#">Los hermanos Coen van en busca de una nueva estatuilla.</a></p>
+                    <p class="p-info">En medio de rumores de una supuesta pelea, Joel y Ethan brindaron una entrevista hablando sobre su nueva y polémica película.</p>
+                </div>
             </figure>
-            <figure>
-                <img class="img-noticias fluid" src="./assets/Periodistas-en-el-cine-1000.jpg">
-                <figcaption class="fig-noticia">Noticia 3</figcaption>
-            </figure>
-            <figure>
-                <img class="img-noticias fluid" src="./assets/Periodistas-en-el-cine-1000.jpg">
-                <figcaption class="fig-noticia">Noticia 4</figcaption>
-            </figure>
-        </div>
-        <div class="noticias-camerica" id="noticias-cine">
-            <figure>
-                <img class="img-noticias-cine fluid" src="./assets/publicidad.jpg">
-                <figcaption class="fig-noticia">Noticia Cine 1</figcaption>
-            </figure>
-            <figure>
-                <img class="img-noticias-cine fluid" src="./assets/publicidad.jpg">
-                <figcaption class="fig-noticia">Noticia Cine 2</figcaption>
-            </figure>
-        </div>
+        </aside>
+        <!-- start noticias cine america -->
+        <aside class="noticias-camerica" id="noticias-cine">
+            <a href="./pages/cineclub.html"><img class="publ-cine" src="./assets/noesperes.png" alt="publicidad cine america"></a>
+        </aside>
     </section>
     <footer id="contacto">
         <div class="social-media">
