--- a/pages/cineclub.html
+++ b/pages/cineclub.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cine America - El Cine Clasico De Santa Fe</title>
+    <title>Tu perfil de Cine Club del Cine America</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="shortcut icon" href="../assets/—Pngtree—film projector_4426282.png" type="image/x-icon">
@@ -17,7 +16,10 @@
             <a href="../index.html">
                 <img class="logo" src="../assets/—Pngtree—film projector_4426282.png" alt="logo de cine america" >
             </a>
-            <a class="navbar-brand" href="../index.html">Cine America</a>
+            <div class="inicio">
+                <a class="navbar-brand" href="../index.html">Cine América</a>
+                <p class="home">inicio</p>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,34 +50,52 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main class="container-fluid">
         <h1 class="ban-cineclub">Perfil de Cine Club</h1>
-        <section class="perfil-cineclub df">
+        <section class="perfil-cineclub">
             <section class="parte-cc">
                 <div class="img-div">
                     <img class="foto-perfil" src="../assets/fotoPerfil.png">
+                    <p class="p-cont mp">Marco Peruzzi</p>
+                    <p class="p-cont sc">Socio Clásico</p>
                 </div>
-                <div class="perf">
-                    <p class="perfil-usuario">Juan Coder</p>
-                    <p class="perfil-usuario">Socio: xxxxxx</p>
-                    <p class="perfil-usuario">Desde: xx/xx/xx</p>
+                <div class="perf wc">
+                    <p class="perfil-usuario">Socio: 011254</p>
+                    <p class="perfil-usuario">Desde: 21/03/19</p>
                     <p class="perfil-usuario">Cantidad de puntos: 420</p>
                     <p class="perfil-usuario">Cantidad de peliculas vistas: 91</p>
                     <p class="perfil-usuario">Peliculas valoradas: 32</p>
-                    <p class="perfil-usuario sobre">Sobre mi</p>
+                    <p class="perfil-usuario">Peliculas comentadas: 22</p>
+                </div>
+                <div class="contacto-cc wc">
+                    <a class="tdn" href="#">
+                        <div class="canje">
+                            Canje de puntos
+                        </div>
+                    </a>
+                    <a class="tdn" href="#">
+                        <div class="cambio c1">
+                            Cambio de plan
+                        </div>
+                    </a>
+                    <a class="tdn" href="#">
+                        <div class="puntos">
+                            Transferir puntos
+                        </div>
+                    </a>
                 </div>
             </section>
-            <section class="parte-datos">
-                <h2 class="dats">Datos personales</h2>
-                <div class="datos-personales">
-                    <p class="perfil-usuario">Nombre</p>
-                    <p class="perfil-usuario">Apellido</p>
-                    <p class="perfil-usuario">Email</p>
-                    <p class="perfil-usuario">Fecha nacimiento</p>
-                    <p class="perfil-usuario">Direccion</p>
-                    <p class="perfil-usuario">Ciudad</p>
-                </div>  
-            </section>
+        </section>
+        <section class="publicidades">
+            <h2 class="ciclos-h">Lo que viene</h2>
+            <div class="ciclos">
+                <div class="publi1">
+                    <img class="publi" src="../assets/Flyer Vertical Películas Noches Cine Evento Ilustrado Retro Rojo Negro.png">
+                </div>
+                <div class="publi1">
+                    <img class="publi" src="../assets/Cartel Ciclo de Cine Ilustración Beige.png">
+                </div>
+            </div>
         </section>
     </main>
     <footer id="contacto">
@@ -87,5 +107,6 @@
         </div>
         <p class="p-footer">25 de Mayo 3055, Santa Fe, Argentina.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
