--- a/pages/entradas.html
+++ b/pages/entradas.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cine America - El Cine Clasico De Santa Fe</title>
+    <title>Compra tu entrada para tu pelicula favorita en Cine America</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="shortcut icon" href="../assets/—Pngtree—film projector_4426282.png" type="image/x-icon">
@@ -17,7 +16,10 @@
             <a href="../index.html">
                 <img class="logo" src="../assets/—Pngtree—film projector_4426282.png" alt="logo de cine america" >
             </a>
-            <a class="navbar-brand" href="../index.html">Cine America</a>
+            <div class="inicio">
+                <a class="navbar-brand" href="../index.html">Cine América</a>
+                <p class="home">inicio</p>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,11 +50,11 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main class="container-fluid">
         <!-- compra tu entrada -->
         <h1>Compra tu entrada</h1>
         <!-- grid -->
-        <section class="grid-entradas grid-entradas-row-column">
+        <section class="grid-entradas grid-entradas-row-column row-cols-sm-12 section-grid">
             <!-- start dias-->
             <div class="dias-pelicula jc" id="dias">
                 <button class="btn-dias">
@@ -94,98 +96,94 @@
             <!-- ends dias -->
             <!-- start nombre pelicula -->
             <div class="nombre-peli jc" id="nomb-peli">
-                <div class="nom-peli">Nombre Pelicula</div>
+                <div class="nom-peli">Hasta el punto</div>
             </div>
             <!-- ends nombre pelicula -->
+            <!-- start tipo peli -->
+            <div class="tipo-peli jc" id="tipo-peli">
+                <div class="tipo-pelicula">Estreno</div>
+            </div>
+            <!-- ends tipo peli -->
             <!-- start info pelicula -->
-            <div class="pelicula-info jc" id="peli-info">
-                <div class="peli-infor">+16. Drama.<br>Director: Juan Coder. Origen: Coderlandia</div>
+            <div class="pelicula-info py-2 px-3" id="peli-info">
+                <div class="peli-infor">
+                    +16
+                </div>
+                <div class="pelis-det">
+                    <span class="span-p">Drama. 119min.</span><br>Director: Jason Burrh. <br>Origen: Belgica / Paises Bajos.
+                </div>
             </div>
             <!-- ends info pelicula -->
             <!-- start compra de entradas-->
             <div class="compra-entradas" id="compra">
-                <div class="btn-group btn-large">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                      Elegí tu película
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Pelicula1</a></li>
-                      <li><a class="dropdown-item" href="#">Pelicula2</a></li>
-                      <li><a class="dropdown-item" href="#">Pelicula3</a></li>
-                      <li><a class="dropdown-item" href="#">Pelicula4</a></li>
-                      <li><a class="dropdown-item" href="#">Pelicula5</a></li>
-                      <li><a class="dropdown-item" href="#">Pelicula6</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                    </ul>
-                </div>
-                <div class="btn-group btn-large">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                      Elegí el horario
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Horario1</a></li>
-                      <li><a class="dropdown-item" href="#">Horario2</a></li>
-                      <li><a class="dropdown-item" href="#">Horario3</a></li>
-                      <li><a class="dropdown-item" href="#">Horario4</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                    </ul>
-                </div>
-                <div class="btn-group btn-large">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                      Cantidad de entradas
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">1</a></li>
-                      <li><a class="dropdown-item" href="#">2</a></li>
-                      <li><a class="dropdown-item" href="#">3</a></li>
-                      <li><a class="dropdown-item" href="#">4</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                    </ul>
-                </div>
-                <div class="btn-group btn-large">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                      Selección de sector
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">a</a></li>
-                      <li><a class="dropdown-item" href="#">b</a></li>
-                      <li><a class="dropdown-item" href="#">c</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                    </ul>
-                </div>
+                <select class="form-select form-select-lg" aria-label=".form-select-sm">
+                    <option selected>Elegí tu película</option>
+                    <option value="1">Hasta el punto</option>
+                    <option value="2">Cruce de datos</option>
+                    <option value="3">El cocodrilo</option>
+                    <option value="4">El orín del Diablo</option>
+                    <option value="5">Símbolo de paz</option>
+                    <option value="6">La muerte del ocelote</option>
+                </select>
+                <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                    <option selected>Elegí el horario</option>
+                    <option value="1">17:30</option>
+                    <option value="2">21:45</option>
+                    <option value="3">21:50</option>
+                    <option value="4">23:45</option>
+                </select>
+                <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                    <option selected>Elegí el sector de la sala</option>
+                    <option value="1">A</option>
+                    <option value="2">B</option>
+                    <option value="3">C</option>
+                    <option value="4">D</option>
+                    <option value="5">F</option>
+                </select>   
+                <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                    <option selected>Cantidad de entradas</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>   
                 <div class="total jc">
                     <div class="calculo jc">
                       Total: $XXX
                     </div>
                 </div>
                 <div class="comprar-area jc">
-                    <button class="comprar-btn jc">Comprar</button>
+                    <a href="#"><button class="btn">Comprar</button></a>
                 </div>
             </div>
             <!-- ends compra de entradas -->
             <!-- start imagen pelicula -->
             <div class="peli-imagen jc" id="peli-img">
-                <img class="portada-comrpa" src="../assets/portadaDePeliculas.png">
+                <img class="portada-compra" src="../assets/portadaDePeliculas.png">
             </div>
             <!-- ends imagen pelicula -->
             <!-- start descripcion pelicula -->
             <div class="peli-desc" id="peli-des">
                 <div class="jc">
                     <p class="p-des">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, magnam atque aperiam velit ea eos voluptatum, modi iure porro temporibus excepturi quidem cupiditate illo culpa dolore blanditiis voluptatibus, quasi praesentium.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, magnam atque aperiam velit ea eos voluptatum, modi iure porro temporibus excepturi quidem cupiditate illo culpa dolore blanditiis voluptatibus, quasi praesentium.
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, magnam atque aperiam velit ea eos voluptatum, modi iure porro temporibus excepturi quidem cupiditate illo culpa dolore blanditiis voluptatibus, quasi praesentium.
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, magnam atque aperiam velit ea eos voluptatum, modi iure porro temporibus excepturi quidem cupiditate illo culpa dolore blanditiis voluptatibus, quasi praesentium.
+                        Esta película, del director Jason Burrh, protagonizada por Cristian Ibagaza y Florence Mach nos hace recorrer las vigas de relaciones truncadas por el azar en el oriente europeo de la década de 1980. Fotografía y diálogos destacados y unas actuaciones que son dignas de premiación. La película nos plantea una pregunta: ¿cuántas veces somos nosotros los que decidimos?
                     </p>
                 </div>
             </div>
             <!-- ends descripcion pelicula -->
+            <!-- start comentarios -->
+            <div class="publicidad-entradas" id="publicidad-entradas">
+                <div class="jc">
+                    <a href="./cineclub.html" alt="publicidad junio">
+                        <img class="junio" src="../assets/junio.png">
+                    </a>
+                </div>
+            </div>
+            <!-- ends comentarios -->
             <!-- start trailer youtube -->
             <div class="trailer-div jc" id="trailer">
                 <div class="trailer1">
-                    <video src="../assets/KV - AFA La Scaloneta - Trailer VERSION EXTENDIDA - Lionel Messi.mp4" autoplay class="video-trailer"></video>
-                </div>
-                <div class="trailer2">
-                    <video src="../assets/KV - AFA La Scaloneta - Trailer VERSION EXTENDIDA - Lionel Messi.mp4" autoplay class="video-trailer"></video>
+                    <video src="../assets/KV - AFA La Scaloneta - Trailer VERSION EXTENDIDA - Lionel Messi.mp4"  class="video-trailer controls"></video>
                 </div>
             </div>
             <!-- ends trailer youtube-->
@@ -200,5 +198,6 @@
         </div>
         <p class="p-footer">25 de Mayo 3055, Santa Fe, Argentina.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
