--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cine America - El Cine Clasico De Santa Fe</title>
+    <title>Ingresa a tu cuenta del Cine America</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="shortcut icon" href="../assets/—Pngtree—film projector_4426282.png" type="image/x-icon">
@@ -17,7 +16,10 @@
             <a href="../index.html">
                 <img class="logo" src="../assets/—Pngtree—film projector_4426282.png" alt="logo de cine america" >
             </a>
-            <a class="navbar-brand" href="../index.html">Cine America</a>
+            <div class="inicio">
+                <a class="navbar-brand" href="../index.html">Cine América</a>
+                <p class="home">inicio</p>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,26 +50,27 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main class="container-fluid">
         <h1 class="ban-cineclub">Ingresar</h1>
         <section class="ingreso">
-            <div class="ingreso-usuario">
-                <p class="p-ingreso">Ingresa a tu cuenta</p>
-                <section class="ingreso-section">
-                    <div class="ingreso-usuario">
-                        <form>
-                            <input type="text" placeholder="Usuario">
-                            <input type="password" placeholder="Contraseña">
-                            <input type="submit" value="Iniciar sesión">
+            <div class="crear-cuenta">
+                <div class="ingreso-usuario">
+                    <div class="iu">
+                        <p class="p-ingreso">Bienvenido</p>
+                        <form class="iu">
+                            <input class="for1" type="text" placeholder="Usuario">
+                            <input class="for1" type="password" placeholder="Contraseña">
+                            <button class="for2">Login</button>
                         </form>
                     </div>
-                </section>
+                    <div class="p-cuenta">
+                        <p>¿No tenes cuenta?</p>
+                        <a class="a-ingreso" href="#"><p class="a-cuenta">Crear cuenta</p></a>
+                    </div>
+                </div>
             </div>
-            <div class="crear-cuenta">
-                <p class="p-ingreso">No tenes cuenta?</p>
-                <section class="crear-usuario">
-                    <button class="cuenta-usuario">Crear cuenta</button>
-                </section>
+            <div class="publi-perfil">
+                <img class="img-perfil" src="../assets/Cartel Ciclo de Cine Ilustración Beige.png">
             </div>
         </section>
     </main>
@@ -80,5 +83,6 @@
         </div>
         <p class="p-footer">25 de Mayo 3055, Santa Fe, Argentina.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
