modificacion en sass

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cine America - El Cine Clasico De Santa Fe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="shortcut icon" href="./assets/—Pngtree—film projector_4426282.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 <body>
     <!-- starts nav -->
@@ -275,7 +275,7 @@
         </aside>
         <!-- start noticias cine america -->
         <aside class="noticias-camerica" id="noticias-cine">
-            <a href="./pages/cineclub.html"><img class="publ-cine" src="./assets/noesperes.png" alt="publicidad cine america"></a>
+            <a href="./pages/cineclub.html"><img class="publ-cine wow flipInX" src="./assets/noesperes.png" alt="publicidad cine america"></a>
         </aside>
     </section>
     <footer id="contacto">
@@ -287,6 +287,11 @@
         </div>
         <p class="p-footer">25 de Mayo 3055, Santa Fe, Argentina.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="./wow/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 </html>
 
