--- a/pages/cartelera.html
+++ b/pages/cartelera.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Elegi la pelicula que quieras en Cine America</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="shortcut icon" href="../assets/—Pngtree—film projector_4426282.png" type="image/x-icon">
 </head>
@@ -55,7 +55,7 @@
         <h1>En Cartelera</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4 colcenter px-5 py-4">
             <!-- pelicula1 -->
-            <div class="col">
+            <div>
               <div class="card h-100 colgrid">
                 <a href="../pages/entradas.html">
                   <img src="../assets/publicidad.jpg" class="card-img-top img-cartelera" alt="portada pelicula1">
