--- a/pages/cartelera.html
+++ b/pages/cartelera.html
@@ -133,7 +133,7 @@
                   <div class="card-body">
                     <h2 class="card-title">El viento trae una cosa (1998)</h2>
                     <h3 class="card-subtitle">Cine Club Temporada 71</h3>
-                    <p class="card-text">La primera de una saga exitosísima que terminó inspirando canciones y mitos populares. Una obra de arte de nuesta tierra que tenés que ver o volver a ver. Una dirección premiada y un elenco que lleva a la perfección esta película de historias mundanas pero irrepetibles, donde lo común es lo raro. Parte del Ciclo CCT71, disponible solo esta semana.</p>
+                    <p class="card-text">La primera de una saga exitosísima que terminó inspirando canciones y mitos populares. Una obra de arte de nuesta tierra que tenés que ver o volver a ver. Una dirección premiada y un elenco que lleva a la perfección esta película de historias mundanas pero irrepetibles, donde lo común es lo raro. Parte del Ciclo CCT71, disponible solo esta semana en Cine America.</p>
                     <h4 class="card-subtitle info-pelicula">ATP. Drama. <br>102 min.<br>Director: Juan Trip. <br>Origen: Argentina</h4>
                     <a class="btn-compra" href="../pages/entradas.html">
                       <button class="btn">Comprar entrada</button>
